[package]
name = "keepass"
version = "0.0.1"
edition = "2021"
description = "KeePass in Rust.  A command-line interface and SDK."
repository = "https://github.com/ManyMath/keepass-rust"
license = "MIT"

[[bin]]
name = "keepass"
path = "src/main.rs"

[lib]
name = "keepass"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
